Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 972
    • Issues 972
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 101
    • Merge requests 101
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

Update #1:

Due to abusive users subverting our CI facilities to mine cryptocurrency, breaking out of the container sandbox in the process, we have been forced to take actions to limit the usage of the public runners to official projects only.

The policy will be enforced on 2023-03-23 (or before if we detect abuses).

Please see this issue for more context and to see if and how you are impacted.

  • GStreamerGStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #1130
Closed
Open
Issue created Nov 28, 2019 by Niels De Graef@nielsdg😁Reporter

nvdec: Takes a lot of time to check supported codecs

Use case: we would like to be able to start multiple (>10) GStreamer HW-accelerated decoding pipelines at the same time, using nvdec.

Problem: When we use the latest nvdec, we see that starting up multiple instances suddenly takes a huge amount of time. After investigating, we found that the biggest reason seems to be the registration of the nvdec plugin. In gst_nvdec_register(), to find out the codecs it can support, it will create a Cuda context (and later throw it away) for each cuda device. Apparently this must take some global lock or something, because the players effectively lock each other.

Solution: I have no idea yet, since I'm not a CUDA expert. Our workaround for now is to cache the supported codecs somewhere and just comment out all the supported codec discovery code. Maybe @seungha.yang knows a better solution? :-)

Edited Nov 28, 2019 by Niels De Graef
Assignee
Assign to
Time tracking